# drone_search_detection

./: .gitmodules  README.md
apriltag_localize/src/: apriltag_xcoord.cpp
coordinate_pkg/: package.xml  setup.cfg  setup.py
coordinate_pkg/coordinate_pkg/: inertial_camera_coord.py  median.py  object_camera_coord.py
localization_package/: CMakeLists.txt  package.xml
localization_package/localization_package/: inertial_camera_coord.py
localization_package/src/: object_inertial.cpp  pixel_inertial.cpp
px4_ros_com/: README.md
px4_ros_com/src/examples/search_pattern/: search_for_tag.cpp
ros_ws/src/px4_ros_com/: CMakeLists.txt
ros_ws/src/px4_ros_com/src/examples/search_pattern/: notes.txt  search_for_tag.cpp
ros_ws/src/ros_com/src/examples/search_pattern/: search_for_tag.cpp
